--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "my-react-cli-101",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
    "bin": {
-    "my-react-cli": "./index.js"
+    "dp-react-cli": "./index.js"
   },
   "author": "det101",
   "license": "ISC"
