--- a/templates/package.json
+++ b/templates/package.json
@@ -1,8 +1,8 @@
 {
   "scripts": {
-    "test": "webpack --env=prod -p --progress --profile --colors",
+    "test": "webpack --env=prod --progress --profile --colors",
     "dev": "webpack-dev-server --env=dev --progress --profile --colors",
-    "dist": "webpack --env=prod -p --progress --profile --colors",
+    "dist": "webpack --env=prod --progress --profile --colors",
     "build-dev": "webpack --env=dev --progress --profile --colors",
     "build": "babel src --presets babel-preset-es2015 --out-dir dist"
   },
@@ -26,7 +26,8 @@
     "url-loader": "^0.5.9",
     "webpack": "^3.5.2",
     "webpack-dev-server": "^2.5.1",
-    "zip-webpack-plugin": "^1.1.0"
+    "zip-webpack-plugin": "^1.1.0",
+    "uglifyjs-webpack-plugin": "^1.2.2",
   },
   "dependencies": {}
 }
