--- a/templates/package.json
+++ b/templates/package.json
@@ -14,6 +14,7 @@
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "babel-preset-react": "^6.1.18",
     "compression-webpack-plugin": "^1.0.0",
     "css-loader": "^0.28.4",
     "eslint": "^4.0.0",
@@ -28,6 +29,16 @@
     "webpack-dev-server": "^2.5.1",
     "zip-webpack-plugin": "^1.1.0",
     "uglifyjs-webpack-plugin": "^1.2.2",
+    "react": "0.14.9",
+    "react-dom": "0.14.9",
+    "react-redux": "^4.0.0",
+    "react-router": "^3.0.2",
+    "redux": "^3.0.4",
+    "redux-thunk": "^2.2.0",
+    "antd": "^2.7.1",
+    "dputils": "^0.5.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    
+  }
 }
